<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.huntingapp.MainActivity"
            android:id="@+id/tracker">

            <TextView
                android:id="@+id/hunt_tracker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hunt_tracker"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/ducks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/ducks"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_duck"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="increaseDucks"
                    android:text="@string/add" />

                <TextView
                    android:id="@+id/ducks_quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/duck_quantity_text_view"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/subtract_duck"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="decreaseDucks"
                    android:text="@string/subtract" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/geese"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/add_geese"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="increaseGeese"
                    android:text="@string/add" />

                <TextView
                    android:id="@+id/geese_quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/geese_quantity_text_view"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/subtract_geese"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="decreaseGeese"
                    android:text="@string/subtract" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/minnesota_links">

        <Button
            android:text="Minnesota DNR Contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minnesota_dnr_link" />

        <Button
            android:text="Minnesota Map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/minnesota_map"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/manitoba_links"
        android:layout_below="@+id/minnesota_links"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">

        <Button
            android:text="Manitoba DNR Contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/manitoba_dnr"
            android:layout_weight="1" />

        <Button
            android:text="Manitoba Map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/manitoba_map"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>